force-app/main/default/objects/Personnel_Action_Change__c/Personnel_Action_Change__c.object-meta.xml
<CustomObject>
    <description>Individual data changes enacted by a personnel action</description>
    <label>Personnel Action Change</label>
    <nameField>
        <label>Change</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personnel Action Change</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>